--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "produto",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,12 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-picker/picker": "^2.5.1",
     "axios": "^1.5.0",
     "expo": "~49.0.12",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-web": "~0.19.6",
     "react-native-x-carousel": "^1.0.1"
   },
   "devDependencies": {
